// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowStatusTag should render Canceled correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#FFF2D9',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Canceled
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Completed correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#ADDEC9',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Completed
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Continued As New correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#EEEEEE',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Continued As New
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Failed correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#FED7D2',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Failed
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Running correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#D4E2FC',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Running
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Terminated correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#FFF2D9',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Terminated
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should render Timed Out correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <span
      class="style={
  ':focus': {},
  ':hover': {},
  alignItems: 'center',
  backgroundColor: '#FED7D2',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'default',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Timed Out
        <div>
          Mock icon 
          end
        </div>
      </span>
    </span>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`WorkflowStatusTag should work with links correctly 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <a
      class="style={
  ':focus': { boxShadow: 'none' },
  ':hover': {
    boxShadow: 'inset 0px 0px 100px rgba(0, 0, 0, 0.08)',
  },
  alignItems: 'center',
  backgroundColor: '#EEEEEE',
  borderBottomColor: null,
  borderBottomLeftRadius: '24px',
  borderBottomRightRadius: '24px',
  borderBottomStyle: 'solid',
  borderBottomWidth: 0,
  borderLeftColor: null,
  borderLeftStyle: 'solid',
  borderLeftWidth: 0,
  borderRadius: '4px',
  borderRightColor: null,
  borderRightStyle: 'solid',
  borderRightWidth: 0,
  borderTopColor: null,
  borderTopLeftRadius: '24px',
  borderTopRightRadius: '24px',
  borderTopStyle: 'solid',
  borderTopWidth: 0,
  boxSizing: 'border-box',
  color: '#000000',
  cursor: 'pointer',
  display: 'inline-flex',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '14px',
  fontWeight: 500,
  height: '16px',
  justifyContent: 'space-between',
  lineHeight: '16px',
  margin: 0,
  marginBottom: '5px',
  marginLeft: '5px',
  marginRight: '5px',
  marginTop: '5px',
  maxWith: 'auto',
  outline: 'none',
  paddingBottom: 0,
  paddingLeft: '4px',
  paddingRight: '4px',
  paddingTop: 0,
}
"
      data-baseweb="tag"
      href="mock_continued_workflow_link"
      rel="noreferrer"
      role="button"
      tabindex="0"
      target="_blank"
    >
      <span
        class="style={
  alignItems: 'center',
  columnGap: '4px',
  display: 'flex',
  flexDirection: 'row',
  fontFamily: 'UberMoveText, system-ui, "Helvetica Neue", Helvetica, Arial, sans-serif',
  fontSize: '12px',
  fontWeight: 500,
  lineHeight: '16px',
  maxWidth: '128px',
  order: 0,
  overflow: 'hidden',
  textOverflow: 'ellipsis',
  whiteSpace: 'nowrap',
}
"
      >
        <div>
          Mock icon 
          start
        </div>
        Continued As New
        <div>
          Mock icon 
          end
        </div>
      </span>
    </a>
  </div>
  <div
    class="style={}
"
  />
</div>
`;
